--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,8 +1,4 @@
 @charset "utf-8";
-@font-face {
-font-family: 'use-SourceHanSansJP';
-  src: url('font/SourceHanSansJP-Normal.otf') format('opentype');
-}
 body{
-  font-family: "use-SourceHanSansJP", "游ゴシック™, "m plus 1p", "メイリオ", sans-serif;
+  font-family: "游ゴシック™, "m plus 1p", "メイリオ", sans-serif;
 }
