--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,4 +1,4 @@
 @charset "utf-8";
-body{
-  font-family: "游ゴシック™, "m plus 1p", "メイリオ", sans-serif;
+body {
+	  font-family:  "Mplus 1p", "Hiragino Sans", "YU Gothic UI", "YuGothic", "Yu Gothic", 'PingFang SC', 'Helvetica Neue', 'Work Sans', 'Hiragino Sans GB', sans-serif;
 }
