--- a/themes/anatole/layouts/partials/sidebar.html
+++ b/themes/anatole/layouts/partials/sidebar.html
@@ -21,7 +21,7 @@
       {{ range $item := .Site.Params.socialIcons }}
         <li>
           <a href="{{ $item.url }}" rel="me" aria-label="{{ $item.title }}">
-            <i class="{{ $item.icon }} fa-2x" aria-hidden="true"></i>
+            <i class="{{ $item.icon }} fa-lg" aria-hidden="true"></i>
           </a>
         </li>
 
