--- a/themes/anatole/layouts/partials/head.html
+++ b/themes/anatole/layouts/partials/head.html
@@ -196,4 +196,5 @@
 
   <!-- Schema.org-->
   {{ partial "schema.html" . }}
+  <meta name="google-site-verification" content="CTBx7qkfq4-sYsYOj8ntqCndRjPjTeTyfbV9ShNyppc" />
 </head>
