--- a/themes/anatole/layouts/partials/head.html
+++ b/themes/anatole/layouts/partials/head.html
@@ -197,4 +197,13 @@
   <!-- Schema.org-->
   {{ partial "schema.html" . }}
   <meta name="google-site-verification" content="CTBx7qkfq4-sYsYOj8ntqCndRjPjTeTyfbV9ShNyppc" />
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MBW8B91VEB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MBW8B91VEB');
+</script>
 </head>
