--- a/themes/anatole/assets/css/style.css
+++ b/themes/anatole/assets/css/style.css
@@ -39,8 +39,8 @@ html[data-theme='dark'] {
   --pre-bg-color: rgb(33, 33, 45);
   --nav-text-color: rgb(191, 191, 191);
   --tag-color: rgb(191, 191, 191);
-  --blockquote-text-color: #808080;
-  --blockquote-border-color: #424242;
+  --blockquote-text-color: rgb(169, 169, 179);
+  --blockquote-border-color: rgb(169, 169, 179);
   --link-color: #58a6fe;
 }
 
@@ -52,7 +52,6 @@ html {
 
 body {
   color: var(--body-color);
-  font-family: 'PingHei', 'PingFang SC', 'Helvetica Neue', 'Work Sans', 'Hiragino Sans GB', sans-serif;
   font-size: 1.5rem;
   width: 100%;
   margin: 0 auto;
@@ -69,6 +68,7 @@ a {
   text-decoration: none;
   color: var(--link-color);
 }
+
 
 blockquote {
   padding: 0 0.8em;
@@ -91,7 +91,18 @@ blockquote {
   background-color: var(--secondary-bg-color);
   border: 1px solid var(--border-color);
 }
-
+	
+	
+code {
+  padding: 1px 4px;
+  border-radius: 2px;
+  font-size: 1.3rem;
+  color: var(--tag-color) !important;
+  background-color: var(--secondary-bg-color);
+  border: 0px solid var(--border-color);
+}	
+	
+	
 .tag::before {
   content: '#';
   opacity: 0.5;
@@ -119,7 +130,7 @@ pre {
 
 a:link,
 a:visited {
-  opacity: 1;
+  color: var(--link-color);
 }
 
 a:hover,
@@ -334,7 +345,8 @@ aside {
 .sidebar .social-links i {
   margin-right: 3px;
 }
-
+	
+	
 .sidebar .social-links li {
   display: inline;
   padding: 0 4px;
@@ -394,7 +406,7 @@ aside {
 .post .post-content a {
   text-decoration: none;
   letter-spacing: 1px;
-  color: #2660ab;
+  color: var(--link-color);
   overflow-wrap: break-word;
   word-wrap: break-word;
 }
