--- a/themes/anatole/layouts/partials/head.html
+++ b/themes/anatole/layouts/partials/head.html
@@ -198,12 +198,12 @@
   {{ partial "schema.html" . }}
   <meta name="google-site-verification" content="CTBx7qkfq4-sYsYOj8ntqCndRjPjTeTyfbV9ShNyppc" />
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-CWBWV1FMDT"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-N4EYQRJ4R7"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-CWBWV1FMDT');
+  gtag('config', 'G-N4EYQRJ4R7');
 </script>
 </head>
